--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/updateuser.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/updateuser.html
@@ -1,119 +1,158 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-<style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-    .login-container {
-      background-color: rgba(255, 255, 255, 0.8); /* Color de fondo con opacidad */
-      padding: 20px;
-      height: 55%;
-      width: 40%;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      text-align: center; /* Centra el contenido del contenedor */
-    }
-    input[type="text"],
-    input[type="password"] {
-      width: calc(100% - 22px);
-      padding: 10px;
-      margin-bottom: 10px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
-    input[type="submit"] {
-      background-color: #007bff;
-      padding: 10px;
-      width: 100%;
-      margin-bottom: 10px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      color: #fff;
-      cursor: pointer;
-    }
-        
-    .error-message {
-	    background-color: red;
-	    color: antiquewhite;
-	    text-align: center;
-	    border-radius: 4px; 
-	    padding: 10px; 
-	    display: none; /* Ocultar por defecto */
-	}
-	
-	form {
-	    position: relative; /* Establecer posición relativa para el formulario */
-	    text-align: left; /* Alinea el texto a la izquierda */
-	}
+	<meta charset="ISO-8859-1">
+	<title>Insert title here</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+		}
 
-	.error-message {
-	    position: absolute;
-	    top: 100%; /* Colocar el mensaje de error debajo del formulario */
-	    left: 50%;
-	    transform: translateX(-50%); /* Centrar horizontalmente */
-	}
+		.login-container {
+			background-color: rgba(255, 255, 255, 0.8);
+			/* Color de fondo con opacidad */
+			padding: 20px;
+			height: 65%;
+			width: 40%;
+			border-radius: 8px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+			text-align: center;
+			/* Centra el contenido del contenedor */
+		}
 
-    
-    
+		input[type="text"],
+		input[type="password"] {
+			width: calc(100% - 22px);
+			padding: 10px;
+			margin-bottom: 10px;
+			border-radius: 4px;
+			border: 1px solid #ccc;
+		}
 
-  </style>
+		input[type="submit"] {
+			background-color: #007bff;
+			padding: 10px;
+			width: 100%;
+			margin-bottom: 10px;
+			border-radius: 4px;
+			border: 1px solid #ccc;
+			color: #fff;
+			cursor: pointer;
+		}
+
+		.error-message {
+			background-color: red;
+			color: antiquewhite;
+			text-align: center;
+			border-radius: 4px;
+			padding: 10px;
+			display: none;
+			/* Ocultar por defecto */
+		}
+
+		form {
+			position: relative;
+			/* Establecer posición relativa para el formulario */
+			text-align: left;
+			/* Alinea el texto a la izquierda */
+		}
+
+		.error-message {
+			position: absolute;
+			top: 100%;
+			/* Colocar el mensaje de error debajo del formulario */
+			left: 50%;
+			transform: translateX(-50%);
+			/* Centrar horizontalmente */
+		}
+	</style>
 </head>
+
 <body style="background-image: url('/imgs/fondologin-register.jpg');">
-  <div class="login-container">
-    <h2 style="text-align: center;">Sign up</h2>
-    <form th:action="@{/auth/register}" th:object="${user}" method="post">
-      <input type="hidden" th:if="${_csrf}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-      <div class="form-label-group">
-        <label>Name:</label>
-        <input type="text" th:field="*{name}" class="form-control" placeholder="Nombre" name="name" required/>
-      </div>
-      <div class="form-label-group">
-        <label>Username:</label>
-        <input type="text" th:field="*{username}" class="form-control" placeholder="Usuario" name="username" required/>
-      </div>
-       <div class="form-label-group">
-        <label>Password:</label>
-        <input type="password" th:field="*{password}" class="form-control" placeholder="Password" name="password" required
-       pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,}" 
-       title="La contraseña debe contener al menos 8 caracteres, incluyendo al menos una mayúscula, una minúscula, un número y un carácter especial."/>
-      </div>
-      <div class="form-label-group">
-        <label for="id_team_user">Equipo favorito:</label>
-        <br>
-        <select style="margin-top: 2%;" class="form-control" id="id_team_user" name="id_team_user">
-            <option value="">Selecciona un equipo</option>
-            <option th:field="*{id_team_user}" th:each="team : ${teams}" th:value="${team.id_team}" th:text="${team.name}">Equipo</option>
-        </select>
-    </div>
-    <br>
-      <input class="btn btn-lg btn-primary btn-block text-uppercase" id="boton" type="submit" value="Registrar"/>
-    </form>
-    <div style="text-align: center;">¿Ya tienes cuenta? <a th:href="@{/auth/login}">Inicia Sesión</a></div>
-  </div>
+	<div class="login-container">
+		<h2 style="text-align: center;">Edit Profile</h2>
+		<form th:action="@{/home/editUser/edit/{id_user}(id_user=${id_user})}" th:object="${usuario}" method="post">
+			<input type="hidden" name="id_user" th:value="${usuario.id_user}">
+			<div class="form-label-group">
+				<label>Name:</label>
+				<input type="text" th:field="*{name}" class="form-control" placeholder="Nombre" name="name" required />
+			</div>
+			<div class="form-label-group">
+				<label>Username:</label>
+				<input type="text" th:field="*{username}" class="form-control" placeholder="Usuario" name="username"
+					required />
+			</div>
+			<div class="form-label-group">
+				<label>Password:</label>
+				<input type="password" th:field="*{password}" class="form-control" placeholder="Password"
+					name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,}"
+					title="La contraseña debe contener al menos 8 caracteres, incluyendo al menos una mayúscula, una minúscula, un número y un carácter especial."
+					oninput="passwordConfirmation.setCustomValidity(''); checkPasswordMatch();">
+
+			</div>
+
+			<div class="form-label-group">
+				<label>Repetir Password:</label>
+				<input type="password" class="form-control" placeholder="Repetir Password" name="passwordConfirmation"
+					 title="Las contraseñas no coinciden" oninput="checkPasswordMatch();">
+				<div id="passwordMatchError" style="color: red; display: none;">Las contraseñas no coinciden</div>
+			</div>
+			<div class="form-label-group">
+				<label for="id_team_user">Equipo favorito:</label>
+				<br>
+				<select style="margin-top: 2%;" class="form-control" id="id_team_user" name="id_team_user">
+					<option value="">Selecciona un equipo</option>
+					<option th:field="*{id_team_user}" th:each="team : ${teams}" th:value="${team.id_team}"
+						th:text="${team.name}">Equipo</option>
+				</select>
+			</div>
+			<br>
+			<input class="btn btn-lg btn-primary btn-block text-uppercase" id="boton" type="submit" value="Edit" />
+		</form>
+	</div>
 </body>
 <script>
-  // Obtener el elemento de mensaje de error
-  var errorMessage = document.querySelector('.error-message');
+	// Obtener el elemento de mensaje de error
+	var errorMessage = document.querySelector('.error-message');
 
-  // Mostrar el mensaje de error si tiene texto
-  if (errorMessage.textContent.trim() !== '') {
-    errorMessage.style.display = 'block';
-  }
-  
-  setTimeout(function() {
-    errorMessage.style.display = 'none';
-  }, 5000);
+	// Mostrar el mensaje de error si tiene texto
+	if (errorMessage.textContent.trim() !== '') {
+		errorMessage.style.display = 'block';
+	}
+
+	setTimeout(function () {
+		errorMessage.style.display = 'none';
+	}, 5000);
+
+	function checkPasswordMatch() {
+		var password = document.querySelector('input[name=password]').value;
+		var confirmPassword = document.querySelector('input[name=passwordConfirmation]').value;
+		var passwordMatchError = document.getElementById('passwordMatchError');
+		var submitButton = document.getElementById('boton');
+
+		if (password !== confirmPassword) {
+			passwordMatchError.style.display = 'block';
+			submitButton.disabled = true;
+			submitButton.style.color = 'black';
+			submitButton.style.fontWeight = 'bold';
+			submitButton.style.backgroundColor = 'lightgrey';
+		} else {
+			passwordMatchError.style.display = 'none';
+			submitButton.disabled = false;
+			submitButton.style.color = 'white';
+			submitButton.style.backgroundColor = '#007bff';
+		}
+	}
 </script>
+
 </html>
