--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/navbar.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/navbar.html
@@ -2,37 +2,31 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-sm navbar-light" th:fragment="navbarFragment"
-		style="background-color: rgb(37, 150, 190); width: 98%;">
-		<div class="container">
-			<div class="d-flex justify-content-between w-100">
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-			</div>
-			<div class="collapse navbar-collapse" id="navbarDropdown">
-				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-					<!-- Elementos comunes para usuarios autenticados y no autenticados -->
-					<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item dropdown">
-						<a class="navbar-toggler" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-							aria-expanded="false" style="white-space: nowrap; color: white;">
-							Registrar
-						</a>
-						<ul class="dropdown-menu" aria-labelledby="navbarDropdown" aria-expanded="true">
-							<li><a class="dropdown-item" href="/admin/register/user">Registrar Usuario</a></li>
-							<li><a class="dropdown-item" href="/admin/register/president">Registrar Presidente</a></li>
-							<li><a class="dropdown-item" href="/admin/register/player">Registrar Jugador</a></li>
-							<li><a class="dropdown-item" href="/admin/register/coach">Registrar Entrenador</a></li>
-							<li><a class="dropdown-item" href="/admin/register/dietist">Registrar Dietista</a></li>
-							<li><a class="dropdown-item" href="/admin/register/physio">Registrar Fisioterapeuta</a></li>
-						</ul>
-					</li>
-					<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
+    <nav class="navbar navbar-expand-sm navbar-light" th:fragment="navbarFragment"
+         style="background-color: rgb(37, 150, 190); width: 98%;">
+        <div class="container">
+            <div class="d-flex justify-content-between w-100">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarDropdown">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <!-- Mostrar solo para usuarios con rol ADMIN -->
+                    <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item dropdown">
+                        <a class="nav-link" href="/admin/registerusers" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false"
+                           style="white-space: nowrap; color: white;">
+                            Registrar
+                        </a>
+                        
+                    </li>
+                    <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
 						<a class="nav-link" href="/admin/registerteam"
 							style="white-space: nowrap; color: white;">Registrar Equipo</a>
 					</li>
@@ -42,54 +36,55 @@
 					<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
 						<a class="nav-link" href="/admin/registermultimedia" style="white-space: nowrap; color: white;">Redactar Noticia</a>
 					</li>
+                    <!-- Elementos siempre visibles -->
+                    <li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
+                        <a class="nav-link" href="/home/yourteam" style="white-space: nowrap; color: white;">Tu
+                            Equipo</a>
+                    </li>
+                    <li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
+                        <a class="nav-link" href="/home/aboutus" style="white-space: nowrap; color: white;">Sobre
+                            nosotros</a>
+                    </li>
+                    <li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
+                        <a class="nav-link" href="/home/contactus"
+                           style="white-space: nowrap; color: white;">Contáctanos</a>
+                    </li>
 
-					<!-- Elementos siempre visibles -->
-					<li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
-						<a class="nav-link" href="/home/yourteam" style="white-space: nowrap; color: white;">Tu
-							Equipo</a>
-					</li>
-					<li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
-						<a class="nav-link" href="/home/aboutus" style="white-space: nowrap; color: white;">Sobre
-							nosotros</a>
-					</li>
-					<li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
-						<a class="nav-link" href="/home/contactus"
-							style="white-space: nowrap; color: white;">Contáctanos</a>
-					</li>
+                    <!-- Elementos para usuarios no autenticados -->
+                    <li sec:authorize="!isAuthenticated()" class="nav-item">
+                        <a class="nav-link" th:href="@{/auth/registerForm}" style="white-space: nowrap; color: white;">
+                            <span class="fa fa-user"></span> Sign up
+                        </a>
+                    </li>
+                    <li sec:authorize="!isAuthenticated()" class="nav-item">
+                        <a class="nav-link" th:href="@{/auth/login}" style="white-space: nowrap; color: white;">
+                            <span class="fa fa-sign-in"></span> Login
+                        </a>
+                    </li>
 
-					<!-- Elementos para usuarios no autenticados -->
-					<li sec:authorize="!isAuthenticated()" class="nav-item">
-						<a class="nav-link" th:href="@{/auth/registerForm}" style="white-space: nowrap; color: white;">
-							<span class="fa fa-user"></span> Sign up
-						</a>
-					</li>
-					<li sec:authorize="!isAuthenticated()" class="nav-item">
-						<a class="nav-link" th:href="@{/auth/login}" style="white-space: nowrap; color: white;">
-							<span class="fa fa-sign-in"></span> Login
-						</a>
-					</li>
+                    <!-- Elementos para usuarios autenticados -->
+                    <li sec:authorize="isAuthenticated()" class="nav-item">
+                        <a class="nav-link" th:text="${usuario}" style="white-space: nowrap; color: white;"></a>
+                    </li>
+                    <li sec:authorize="hasRole('ROLE_USER')" class="nav-item active">
+                        <a class="nav-link editar" type="submit" href="/home/editUser"
+                           style="color: white; height: 50px; width: 105px;">Editar Perfil</a>
+                    </li>
+                    <li sec:authorize="isAuthenticated()" class="nav-item">
+                        <form th:action="@{/logout}" method="post">
+                            <button class="btn btn-link fa fa-sign-in" type="submit"
+                                    style="color: white; width: 105px; margin-top: 5px; margin-left: -15px;">Logout
+                            </button>
+                        </form>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Enlace a Bootstrap JS y Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 
-					<!-- Elementos para usuarios autenticados -->
-					<li sec:authorize="isAuthenticated()" class="nav-item">
-						<a class="nav-link" th:text="${usuario}" style="white-space: nowrap; color: white;"></a>
-					</li>
-					<li sec:authorize="hasRole('ROLE_USER')" class="nav-item active">
-						<a class="nav-link editar" type="submit" href="/home/editUser"
-							style="color: white; height: 50px; width: 105px;">Editar Perfil</a>
-					</li>
-					<li sec:authorize="isAuthenticated()" class="nav-item">
-						<form th:action="@{/logout}" method="post">
-							<button class="btn btn-link fa fa-sign-in" type="submit"
-								style="color: white; width: 105px; margin-top: 5px; margin-left: -15px;">Logout
-							</button>
-						</form>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
-	
 </body>
 
 </html>
