add player(falta checkbox)/game(falta calendario)/coach/president

--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/registerallusers.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/registerallusers.html
@@ -80,24 +80,24 @@
                     <img src="'../static/imgs/iconos/usericon.png'" th:src="@{/imgs/iconos/usericon.png}" width="150px" height="150px" alt="Badge">
                 </a>
 
-                <a href="/yourteam/squad" class="col-md-6 text-center card" style="padding-bottom: 2%;">
+                <a href="/admin/registerusers/player" class="col-md-6 text-center card" style="padding-bottom: 2%;">
                     <h2>Registrar Jugador</h2>
                     <img src="'../static/imgs/iconos/futbolista.png'" th:src="@{/imgs/iconos/futbolista.png}" width="150px" height="150px" alt="Badge">
                 </a>
 
-                <a href="/yourteam/multimedia" class="col-md-6 text-center card" style="padding-bottom: 2%;">
+                <a href="/admin/registerusers/coach" class="col-md-6 text-center card" style="padding-bottom: 2%;">
                     <h2>Registrar Entrenador</h2>
                     <img src="'../static/imgs/iconos/entrenador.png'" th:src="@{/imgs/iconos/entrenador.png}" width="150px" height="150px" alt="Badge">
                 </a>
 
-                <a href="/yourteam/multimedia" class="col-md-6 text-center card" style="padding-bottom: 2%;">
+                <a href="/admin/registerusers/president" class="col-md-6 text-center card" style="padding-bottom: 2%;">
                     <h2>Registrar Presidente</h2>
                     <img src="'../static/imgs/iconos/presidente.png'" th:src="@{/imgs/iconos/presidente.png}" width="150px" height="150px" alt="Badge">
                 </a>
             </div>
             <!-- Segunda fila de tarjetas -->
             <div class="card-container">
-                <a href="/yourteam/multimedia" class="col-md-6 text-center card" style="padding-bottom: 2%;">
+                <a href="/admin/registerusers/game" class="col-md-6 text-center card" style="padding-bottom: 2%;">
                     <h2>Registrar Partido</h2>
                     <img src="'../static/imgs/iconos/partido.png'" th:src="@{/imgs/iconos/partido.png}" width="150px" height="150px" alt="Badge">
                 </a>
