--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/register.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/register.html
@@ -44,25 +44,21 @@
       cursor: pointer;
     }
         
-    .error-message {
-	    background-color: red;
-	    color: antiquewhite;
-	    text-align: center;
-	    border-radius: 4px; 
-	    padding: 10px; 
-	    display: none; /* Ocultar por defecto */
-	}
-	
 	form {
 	    position: relative; /* Establecer posición relativa para el formulario */
 	    text-align: left; /* Alinea el texto a la izquierda */
 	}
 
 	.error-message {
+		background-color: red;
+	    color: antiquewhite;
+	    text-align: center;
+	    display: none; /* Ocultar por defecto */
 	    position: absolute;
-	    top: 100%; /* Colocar el mensaje de error debajo del formulario */
+	    top: 8%; /* Colocar el mensaje de error debajo del formulario */
 	    left: 50%;
-	    transform: translateX(-50%); /* Centrar horizontalmente */
+	    border: solid 10px red;
+	    transform: translateX(-40%); /* Centrar horizontalmente */
 	}
 
   </style>
@@ -70,6 +66,9 @@
 <body style="background-image: url('/imgs/fondologin-register.jpg');">
   <div class="login-container">
     <h2 style="text-align: center;">Sign up</h2>
+     <div th:if="${error}" class="error-message">
+            <p th:text="${error}"></p>
+        </div>
     <form th:action="@{/auth/register}" th:object="${user}" method="post">
       <input type="hidden" th:if="${_csrf}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
       <div class="form-label-group">
