--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/registernewgame.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/registernewgame.html
@@ -84,7 +84,7 @@
 			<div th:if="${error}" class="error-message alert alert-danger" role="alert">
 				<p th:text="${error}"></p>
 			</div>
-			<h2 style="text-align: center; text-decoration:underline;">Registro de Presidente</h2>
+			<h2 style="text-align: center; text-decoration:underline;">Registro de Partido</h2>
 			<br>
 			<form th:action="@{/admin/registerusers/newGame}" th:object="${game}" method="post"
 				enctype="multipart/form-data">
@@ -118,8 +118,8 @@
 					<input type="number" class="form-control" id="numberGame" name="numberGame" required>
 				</div>
 				<div class="mb-3">
-					<label for="date" class="form-label">Match Date:</label>
-					<input type="datetime-local" class="form-control" id="date" name="date" required>
+					<label for="date" class="form-label">Match Date: (Use este formato (yyyy-MM-dd HH:mm:ss.0000000))</label>
+					<input type="text" class="form-control" id="date" name="date" required>
 				</div>
 				<div class="mb-3">
 					<label for="tickets" class="form-label">Nº Tickets:</label>
