--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/registermultimediaVideo.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/registermultimediaVideo.html
@@ -83,17 +83,20 @@
 		<div class="form-container">
 			<form th:action="@{admin/registerNewMultimediaVideo}" th:object="${multimedia}" method="post"
 				enctype="multipart/form-data">
+				<div th:if="${success}" class="alert alert-success" role="alert">
+					<span th:text="${success}"></span>
+				</div>
 				<div class="mb-3">
 					<label class="form-label">Selecciona el tipo de contenido:</label>
 					<div class="form-check">
-						<input class="form-check-input" type="radio" name="contentType" id="texto" value="texto"
-							>
+						<input class="form-check-input" type="radio" name="contentType" id="texto" value="texto">
 						<label class="form-check-label" for="texto">
 							Texto
 						</label>
 					</div>
 					<div class="form-check">
-						<input class="form-check-input" type="radio" name="contentType" id="video" value="video" checked>
+						<input class="form-check-input" type="radio" name="contentType" id="video" value="video"
+							checked>
 						<label class="form-check-label" for="video">
 							Video
 						</label>
@@ -110,10 +113,9 @@
 						<input type="text" class="form-control" id="video" name="video">
 					</div>
 				</div>
-				<br>
+				
 				<label for="idteammultimedia"><strong> Equipo favorito: </strong></label>
-				<br>
-				<select style="margin-top: 2%;" class="form-control" id="idteammultimedia" name="idteammultimedia">
+				<select style="margin-top:1%;" class="form-control" id="idteammultimedia" name="idteammultimedia">
 					<option th:field="*{idteammultimedia}" th:each="team : ${teams}" th:value="${team.id_team}"
 						th:text="${team.name}">Equipo</option>
 				</select>
@@ -144,6 +146,19 @@
 					}
 				});
 			});
+
+
+			var successMessage = document.querySelector('.alert-success');
+
+			// Mostrar el mensaje de error si tiene texto
+			if (successMessage.textContent.trim() !== '') {
+				successMessage.style.display = 'block';
+			}
+
+			setTimeout(function () {
+				successMessage.style.display = 'none';
+			}, 5000);
+
 		</script>
 		<br>
 		<!-- Footer -->
