--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/registernewcoach.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/registernewcoach.html
@@ -81,9 +81,16 @@
 		<br>
 		<!-- Cuerpo -->
 		<div class="container form-container">
+			<div th:if="${success}" class="alert alert-success" role="alert">
+				<span th:text="${success}"></span>
+			</div>
+			<div th:if="${error}" class="error-message alert alert-danger" role="alert">
+				<p th:text="${error}"></p>
+			</div>
 			<h2 style="text-align: center; text-decoration:underline;">Registro de Entrenador</h2>
 			<br>
-			<form th:action="@{/admin/registerusers/newCoach}" th:object="${coach}" method="post" enctype="multipart/form-data">
+			<form th:action="@{/admin/registerusers/newCoach}" th:object="${coach}" method="post"
+				enctype="multipart/form-data">
 				<input type="hidden" th:if="${_csrf}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 				<!-- Common fields -->
 				<div class="mb-3">
@@ -96,22 +103,22 @@
 				</div>
 				<div class="form-label-group">
 					<label for="photo"><strong>Select Image: </strong></label>
-					<input style="margin-top: 1%;" type="file" id="photoFile" name="photoFile" accept=".png, .jpg, .jpeg" onchange="updateHiddenField()"
-						class="form-control">
+					<input style="margin-top: 1%;" type="file" id="photoFile" name="photoFile"
+						accept=".png, .jpg, .jpeg" onchange="updateHiddenField()" class="form-control">
 				</div>
-				<div><input type="hidden" id="photo" name="photo" th:field="*{photo}"> </div>		
+				<div><input type="hidden" id="photo" name="photo" th:field="*{photo}"> </div>
 				<div class="mb-3">
 					<label for="arrival_season" class="form-label">Arrival Season:</label>
 					<input type="text" class="form-control" id="arrival_season" name="arrival_season">
 				</div>
 				<div class="form-label-group">
-					<label for="idteam_coach">Favourite Team:</label>
-					<select  class="form-control" id="idteam_coach" name="idteam_coach">
-						<option th:field="*{idteam_coach}" th:each="team : ${teams}" th:value="${team.id_team}"
+					<label for="idteamcoach"><strong>Favourite Team: </strong></label>
+					<select class="form-control" id="idteamcoach" name="idteamcoach">
+						<option th:field="*{idteamcoach}" th:each="team : ${teams}" th:value="${team.id_team}"
 							th:text="${team.name}">Team</option>
 					</select>
 				</div>
-				
+
 				<br>
 				<button type="submit" class="btn btn-primary">Registrar</button>
 			</form>
@@ -127,6 +134,29 @@
 					logoNameInput.value = fileName;
 				}
 			}
+			// Obtener el elemento de mensaje de error
+			var errorMessage = document.querySelector('.error-message');
+			var successMessage = document.querySelector('.alert-success');
+
+			// Mostrar el mensaje de error si tiene texto
+			if (errorMessage && errorMessage.textContent.trim() !== '') {
+				errorMessage.style.display = 'block';
+			}
+
+			// Mostrar el mensaje de éxito si tiene texto
+			if (successMessage && successMessage.textContent.trim() !== '') {
+				successMessage.style.display = 'block';
+			}
+
+			// Ocultar los mensajes después de 5 segundos
+			setTimeout(function () {
+				if (errorMessage) {
+					errorMessage.style.display = 'none';
+				}
+				if (successMessage) {
+					successMessage.style.display = 'none';
+				}
+			}, 5000);
 		</script>
 		<br>
 		<br>
