--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/registernewphysio.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/registernewphysio.html
@@ -81,22 +81,25 @@
 		<br>
 		<!-- Cuerpo -->
 		<div class="container form-container">
+			<div th:if="${success}" class="alert alert-success" role="alert">
+				<span th:text="${success}"></span>
+			</div>
 			<h2 style="text-align: center; text-decoration:underline;">Registro de Fisioterapeuta</h2>
 			<br>
 			<form th:action="@{/admin/registerusers/newPhysio}" th:object="${user}" method="post">
 				<input type="hidden" th:if="${_csrf}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 				<div class="form-label-group">
-					<label>Full Name:</label>
+					<label><strong>Nombre Completo: </strong></label>
 					<input type="text" th:field="*{name}" class="form-control" placeholder="Name" name="name"
 						required />
 				</div>
 				<div class="form-label-group">
-					<label>Age:</label>
+					<label><strong>Edad:</strong> </label>
 					<input type="number" th:field="*{age}" class="form-control" placeholder="Age" name="age"
 						required />
 				</div>				
 				<div class="form-label-group">
-					<label for="idteam_physio">Favourite Team:</label>
+					<label for="idteam_physio"><strong> Equipo: </strong></label>
 					<select  class="form-control" id="idteam_physio" name="idteam_physio">
 						<option th:field="*{idteam_physio}" th:each="team : ${teams}" th:value="${team.id_team}"
 							th:text="${team.name}">Team</option>
@@ -119,36 +122,17 @@
 </body>
 <script>
 	// Obtener el elemento de mensaje de error
-	var errorMessage = document.querySelector('.error-message');
+	var successMessage = document.querySelector('.alert-success');
 
 	// Mostrar el mensaje de error si tiene texto
-	if (errorMessage.textContent.trim() !== '') {
-		errorMessage.style.display = 'block';
+	if (successMessage.textContent.trim() !== '') {
+		successMessage.style.display = 'block';
 	}
 
 	setTimeout(function () {
-		errorMessage.style.display = 'none';
+		successMessage.style.display = 'none';
 	}, 5000);
 
-	function checkPasswordMatch() {
-		var password = document.querySelector('input[name=password]').value;
-		var confirmPassword = document.querySelector('input[name=passwordConfirmation]').value;
-		var passwordMatchError = document.getElementById('passwordMatchError');
-		var submitButton = document.getElementById('boton');
-
-		if (password !== confirmPassword) {
-			passwordMatchError.style.display = 'block';
-			submitButton.disabled = true;
-			submitButton.style.color = 'black';
-			submitButton.style.fontWeight = 'bold';
-			submitButton.style.backgroundColor = 'lightgrey';
-		} else {
-			passwordMatchError.style.display = 'none';
-			submitButton.disabled = false;
-			submitButton.style.color = 'white';
-			submitButton.style.backgroundColor = '#007bff';
-		}
-	}
 </script>
 
 </html>
