--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/registernewuser.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/registernewuser.html
@@ -81,22 +81,28 @@
 		<br>
 		<!-- Cuerpo -->
 		<div class="container form-container">
+			<div th:if="${success}" class="alert alert-success" role="alert">
+				<span th:text="${success}"></span>
+			</div>
+			<div th:if="${error}" class="error-message alert alert-danger" role="alert">
+				<p th:text="${error}"></p>
+			</div>
 			<h2 style="text-align: center; text-decoration:underline;">Registro de Usuario</h2>
 			<br>
 			<form th:action="@{/admin/registerusers/newUser}" th:object="${user}" method="post">
 				<input type="hidden" th:if="${_csrf}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 				<div class="form-label-group">
-					<label>Name:</label>
+					<label><strong>Nombre:</strong></label>
 					<input type="text" th:field="*{name}" class="form-control" placeholder="Nombre" name="name"
 						required />
 				</div>
 				<div class="form-label-group">
-					<label>Username:</label>
+					<label><strong>Usuario:</strong></label>
 					<input type="text" th:field="*{username}" class="form-control" placeholder="Usuario" name="username"
 						required />
 				</div>
 				<div class="form-label-group">
-					<label>Password:</label>
+					<label><strong>Contraseña:</strong></label>
 					<input type="password" th:field="*{password}" class="form-control" placeholder="Password"
 						name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,}"
 						title="La contraseña debe contener al menos 8 caracteres, incluyendo al menos una mayúscula, una minúscula, un número y un carácter especial."
@@ -105,14 +111,14 @@
 				</div>
 
 				<div class="form-label-group">
-					<label>Repetir Password:</label>
+					<label><strong>Repetir Contraseña:</strong></label>
 					<input type="password" class="form-control" placeholder="Repetir Password"
 						name="passwordConfirmation" title="Las contraseñas no coinciden"
 						oninput="checkPasswordMatch();">
 					<div id="passwordMatchError" style="color: red; display: none;">Las contraseñas no coinciden</div>
 				</div>
 				<div class="form-label-group">
-					<label for="id_team_user">Equipo favorito:</label>
+					<label for="id_team_user"><strong>Equipo favorito: </strong></label>
 					<select  class="form-control" id="id_team_user" name="id_team_user">
 						<option th:field="*{id_team_user}" th:each="team : ${teams}" th:value="${team.id_team}"
 							th:text="${team.name}">Equipo</option>
