--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/editallusers.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/editallusers.html
@@ -75,21 +75,21 @@
         <div class="row align-items-center justify-content-center">
             <!-- Primera fila de tarjetas -->
             <div class="card-container">
-                <a href="/adminedit/showUsers" class="col-md-6 text-center card" style="padding-bottom: 2%;">
+                <a href="/adminshow/showUsers" class="col-md-6 text-center card" style="padding-bottom: 2%;">
                     <h2>Edit User</h2>
                     <img src="'../static/imgs/iconos/usericon.png'" th:src="@{/imgs/iconos/usericon.png}" width="150px" height="150px" alt="Badge">
                 </a>
 
-                <a href="/adminedit/showPlayers" class="col-md-6 text-center card" style="padding-bottom: 2%;">
+                <a href="/adminshow/showPlayers" class="col-md-6 text-center card" style="padding-bottom: 2%;">
                     <h2>Edit Player</h2>
                     <img src="'../static/imgs/iconos/futbolista.png'" th:src="@{/imgs/iconos/futbolista.png}" width="150px" height="150px" alt="Badge">
                 </a>
 
-				<a href="/adminedit/showTeams" class="col-md-6 text-center card" style="padding-bottom: 2%;">
+				<a href="/adminshow/showTeams" class="col-md-6 text-center card" style="padding-bottom: 2%;">
                     <h2>Edit Team</h2>
                     <img src="'../static/imgs/iconos/teamicon.png'" th:src="@{/imgs/iconos/teamicon.png}" width="150px" height="150px" alt="Badge">
                 </a>
-                <a href="/adminedit/showCoachs" class="col-md-6 text-center card" style="padding-bottom: 2%;">
+                <a href="/adminshow/showCoachs" class="col-md-6 text-center card" style="padding-bottom: 2%;">
                     <h2>Edit Coach</h2>
                     <img src="'../static/imgs/iconos/entrenador.png'" th:src="@{/imgs/iconos/entrenador.png}" width="150px" height="150px" alt="Badge">
                 </a>
@@ -97,22 +97,22 @@
             </div>
             <!-- Segunda fila de tarjetas -->
             <div class="card-container">
-				<a href="/adminedit/showPresidents" class="col-md-6 text-center card" style="padding-bottom: 2%;">
+				<a href="/adminshow/showPresidents" class="col-md-6 text-center card" style="padding-bottom: 2%;">
                     <h2>Edit President</h2>
                     <img src="'../static/imgs/iconos/presidente.png'" th:src="@{/imgs/iconos/presidente.png}" width="150px" height="150px" alt="Badge">
                 </a>
                 
-                <a href="/adminedit/showMatchs" class="col-md-6 text-center card" style="padding-bottom: 2%;">
+                <a href="/adminshow/showMatchs" class="col-md-6 text-center card" style="padding-bottom: 2%;">
                     <h2>Edit Match</h2>
                     <img src="'../static/imgs/iconos/partido.png'" th:src="@{/imgs/iconos/partido.png}" width="150px" height="150px" alt="Badge">
                 </a>
 
-                <a href="/adminedit/showPhysios" class="col-md-6 text-center card" style="padding-bottom: 2%;">
+                <a href="/adminshow/showPhysios" class="col-md-6 text-center card" style="padding-bottom: 2%;">
                     <h2>Edit Physio</h2>
                     <img src="'../static/imgs/iconos/fisio.png'" th:src="@{/imgs/iconos/fisio.png}" width="150px" height="150px" alt="Badge">
                 </a>
 
-                <a href="/adminedit/showDietists" class="col-md-6 text-center card" style="padding-bottom: 2%;">
+                <a href="/adminshow/showDietists" class="col-md-6 text-center card" style="padding-bottom: 2%;">
                     <h2>Edit Dietist</h2>
                     <img src="'../static/imgs/iconos/dietista.png'" th:src="@{/imgs/iconos/dietista.png}" width="150px" height="150px" alt="Badge">
                 </a>
