--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showcoachs.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showcoachs.html
@@ -165,7 +165,7 @@
 								<td>
 									<i class="fa fa-wrench"></i>
 									<a class="fa fa-trash"
-										th:href="@{/adminedit/deleteCoach/{id}(id=${coach.id_coach})}"
+										th:href="@{/adminshow/deleteCoach/{id}(id=${coach.id_coach})}"
 										th:onclick="return confirm('¿Are you sure you want to delete this coach?');"></a>
 								</td>
 							</tr>
