--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showmatchs.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showmatchs.html
@@ -162,7 +162,7 @@
 								<td>
 									<i class="fa fa-wrench"></i>
 									<a class="fa fa-trash"
-										th:href="@{/adminedit/deleteMatch/{id}(id=${match.id_game})}"
+										th:href="@{/adminshow/deleteMatch/{id}(id=${match.id_game})}"
 										th:onclick="return confirm('¿Are you sure you want to delete this match?');"></a>
 								</td>
 							</tr>
