--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showteams.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showteams.html
@@ -154,7 +154,7 @@
 								<td>
 									<i class="fa fa-wrench"></i>
 									<a class="fa fa-trash"
-									th:href="@{/adminedit/deleteTeam/{id}(id=${team.id_team})}"
+									th:href="@{/adminshow/deleteTeam/{id}(id=${team.id_team})}"
 										th:onclick="return confirm('¿Are you sure you want to delete this team?');"></a>
 								</td>
 							</tr>
