--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showusers.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showusers.html
@@ -155,7 +155,7 @@
 								<td>
 									<i class="fa fa-wrench"></i>
 									<a class="fa fa-trash"
-										th:href="@{/adminedit/deleteUser/{id}(id=${user.id_user})}"
+										th:href="@{/adminshow/deleteUser/{id}(id=${user.id_user})}"
 										th:onclick="return confirm('¿Are you sure you want to delete this user?');"></a>
 								
 								</td>
