--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showdietists.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showdietists.html
@@ -160,7 +160,7 @@
 								<td th:each="team : ${teams}" th:if="${team.id_team == dietist.idteam_dietist}"
 									th:text="${team.name}">Dietist Team</td>
 								<td>
-									<i class="fa fa-wrench"></i>
+									<a class="fa fa-wrench" th:href="@{/adminedit/updateDietist/{id}(id=${dietist.id_dietist})}"></a>
 									<a class="fa fa-trash"
 										th:href="@{/adminshow/deleteDietist/{id}(id=${dietist.id_dietist})}"
 										th:onclick="return confirm('¿Are you sure you want to delete this dietist?');"></a>
