--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showphysios.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showphysios.html
@@ -156,7 +156,7 @@
 								<td th:each="team : ${teams}" th:if="${team.id_team == physio.idteam_physio}"
 									th:text="${team.name}">Physio Team</td>
 								<td>
-									<i class="fa fa-wrench"></i>
+									<a class="fa fa-wrench" th:href="@{/adminedit/updatePhysio/{id}(id=${physio.id_physio})}"></a>
 									<a class="fa fa-trash"
 										th:href="@{/adminshow/deletePhysio/{id}(id=${physio.id_physio})}"
 										th:onclick="return confirm('¿Are you sure you want to delete this physio?');"></a>
