--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showusers.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showusers.html
@@ -153,7 +153,7 @@
 								<td th:each="team : ${teams}" th:if="${user.id_team_user == team.id_team}"
 									th:text="${team.name}">Team ID</td>
 								<td>
-									<i class="fa fa-wrench"></i>
+									<a class="fa fa-wrench" th:href="@{/adminedit/updateUser/{id}(id=${user.id_user})}"></a>
 									<a class="fa fa-trash"
 										th:href="@{/adminshow/deleteUser/{id}(id=${user.id_user})}"
 										th:onclick="return confirm('¿Are you sure you want to delete this user?');"></a>
