commit translate pages

--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/contact.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/contact.html
@@ -6,7 +6,7 @@
 	<link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
 	<!--<link th:href="@{/webjars/font-awesome/6.4.2/css/font-awesome.css}" rel="stylesheet">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>Contacto</title>
+	<title>Contact</title>
 	<style>
 		body,
 		html {
@@ -56,17 +56,19 @@
 		<div class="row align-items-center justify-content-center">
 			<div class="col-md-6 text-center"
 				style="background-color: rgba(255, 255, 255, 0.7); border-radius: 10px; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-				<h2>Contacto</h2>
 
-				<p>¡Nos encantaría saber de ti! Si tienes alguna pregunta, comentario o sugerencia, no dudes en ponerte
-					en contacto con nosotros. Estamos aquí para ayudarte en todo lo que podamos.</p>
 
-				<p>Puedes comunicarte con nuestro equipo de atención al cliente a través de los siguientes medios:</p>
+				<h2>Contact</h2>
+
+				<p>We would love to hear from you! If you have any questions, comments, or suggestions, please do not
+					hesitate to get in touch with us. We are here to assist you in any way we can.</p>
+
+				<p>You can reach our customer service team through the following means:</p>
 
 				<ul style="list-style-type: none; padding-left: 0;">
-					<li><i class="fa fa-envelope"></i> Correo electrónico: info@footballzone.com</li>
-					<li><i class="fa fa-phone"></i> Teléfono: +34 666578412</li>
-					<li><i class="fa fa-map-marker"></i> Dirección: Av. Principal #123, Barbate (Cádiz), España</li>
+					<li><i class="fa fa-envelope"></i> Email: info@footballzone.com</li>
+					<li><i class="fa fa-phone"></i> Phone: +34 666578412</li>
+					<li><i class="fa fa-map-marker"></i> Address: Av. Principal #123, Barbate (Cádiz), Spain</li>
 				</ul>
 			</div>
 		</div>
