--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/home.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/home.html
@@ -52,15 +52,11 @@
 		<!-- Cuerpo -->
 		 <div class="row align-items-center justify-content-center">
         <div class="col-md-6 text-center" style="background-color: rgba(255, 255, 255, 0.7); border-radius: 10px; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-				<h2>¡Bienvenido a FootballZone!</h2>
-
-<p> En FootballZone, te sumergimos en el apasionante mundo del fútbol, donde la emoción nunca termina y cada partido es una nueva aventura. Desde las hazañas legendarias de los grandes jugadores hasta los momentos más emocionantes en la historia de este deporte, aquí encontrarás todo lo que necesitas para mantener tu pasión por el fútbol encendida.
-
-<p>  Explora nuestras noticias de última hora, mantente al tanto de los fichajes más recientes y descubre análisis detallados de los partidos más importantes. No importa si eres un fanático acérrimo de un equipo en particular o simplemente amas el juego en general, en FootballZone, tenemos algo para todos.</p>
-
-<p>  Únete a nuestra comunidad de aficionados, comparte tus opiniones y debates enérgicos sobre el deporte más popular del mundo. Ya seas un seguidor de la liga local o un apasionado del fútbol internacional, aquí encontrarás un lugar donde tu amor por el juego puede florecer. </p>
-
-<p>  Estamos aquí para celebrar la grandeza del fútbol, desde los momentos de gloria en el campo hasta los relatos más inspiradores fuera de él. ¡Bienvenido a FootballZone, donde el fútbol cobra vida!</p>​
+				<h2>Welcome to FootballZone!</h2>
+<p> At FootballZone, we immerse you in the exciting world of football, where the excitement never ends and every match is a new adventure. From the legendary feats of great players to the most thrilling moments in the history of this sport, here you will find everything you need to keep your passion for football alive.</p>
+<p> Explore our breaking news, stay updated on the latest transfers, and discover detailed analyses of the most important matches. Whether you're a die-hard fan of a particular team or simply love the game in general, at FootballZone, we have something for everyone.</p>
+<p> Join our community of fans, share your opinions, and engage in lively debates about the world's most popular sport. Whether you're a follower of the local league or an enthusiast of international football, here you'll find a place where your love for the game can flourish.</p>
+<p> We are here to celebrate the greatness of football, from moments of glory on the field to the most inspiring stories off it. Welcome to FootballZone, where football comes to life!</p>
 			</div>
 		</div>
 		<br>
